Closed Bug 1633045 Opened 4 years ago Closed 4 years ago

position:sticky should not move when the Print Preview viewport is scrolled

Categories

(Core :: Layout: Positioned, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox77 --- verified

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

(Keywords: testcase, Whiteboard: [print2020_v77])

Attachments

(2 files)

Attached file position-sticky.html

STR

  1. open the attached testcase
  2. Print Preview
  3. scroll down

ACTUAL RESULT
The "sticky" box moves to stay in view. (Well, at least for the extent of the first page, it appears to be clipped away after that.)

EXPECTED
The "sticky" box should remain at its original position and not be affected by scrolling the Print Preview scrollbar at all.

ADDITIONAL INFORMATION
The bug occurs in Firefox Nightly 77.0a1 (2020-04-24) (64-bit) on Linux.
The bug does NOT occur in Chrome on Linux.

Whiteboard: [print2020]

This seems fairly trivial to fix...

Assignee: nobody → mats
Pushed by mpalmgren@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/316c72999bc1
Don't use the Print Preview viewport scroll frame as a scroll container for 'position:sticky' content.  r=TYLin
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Flags: qe-verify+
Whiteboard: [print2020] → [print2020_v77]

Verified-fixed on the latest Beta 77.0b7 on Windows 10 and Ubuntu 16.04.
The "sticky" box should remain at its original position and is not be affected by scrolling the Print Preview scrollbar at all.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: