Bug 1633045 - Don't use the Print Preview viewport scroll frame as a scroll container for 'position:sticky' content.  r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D72529